fixed spacing on images

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -51,7 +51,7 @@ section {
 }
 .person {
 	display: inline-block;
-	margin:20px;
+	width:150px;
 }
 .circular {
 	display: block;
